hire me content added

--- a/css/style.css
+++ b/css/style.css
@@ -2579,3 +2579,7 @@ blockquote {
   margin-top: 25px;
   width: 100%;
 }
+.new-style {
+  list-style: disc !important;
+  list-style-position: inside !important;
+}
